check are-friend to see post